fix buttons on small screens

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -16,12 +16,19 @@
    max-width: 95vw;
 }
 
-
-/* add padding between buttons */
-.buttons > * {
-    margin: 0 0.5rem;
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
 }
 
+@media screen and (min-width: 768px) {
+    .buttons {
+        flex-direction: row;
+    }
+}
+    
 
 
 
